force-app/main/default/objects/Program_Engagement_Role__c/Program_Engagement_Role__c.object-meta.xml
<CustomObject>
    <description>Designates the role of other contacts acting in support of a person of family engaged in a program.</description>
    <label>Program Engagement Role</label>
    <nameField>
        <displayFormat>PER-{000000}</displayFormat>
        <label>Program Engagement Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Engagement Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>