force-app/main/default/objects/Program_Engagement_Role__c/fields/Program_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Program_Engagement__c</fullName>
    <label>Program Engagement</label>
    <referenceTo>pmdm__ProgramEngagement__c</referenceTo>
    <relationshipLabel>Program Engagement Roles</relationshipLabel>
    <relationshipName>Program_Engagement_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>