force-app/main/default/objects/Program_Engagement_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Describes the role a person has in supporting a contact engaged in a program.</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Volunteer - Grocery Shopping</fullName>
            </value>
            <value>
                <fullName>Volunteer - Education/Schooling</fullName>
            </value>
            <value>
                <fullName>Volunteer - Translation services</fullName>
            </value>
            <value>
                <fullName>Volunteer - Housing</fullName>
            </value>
            <value>
                <fullName>Volunteer - Finance &amp; Budgeting</fullName>
            </value>
            <value>
                <fullName>Volunteer - Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Sponsoring Relative</fullName>
            </value>
            <value>
                <fullName>Parish Pastor</fullName>
            </value>
            <value>
                <fullName>Co-Sponsor (non-relative)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>